--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </section>
 
     <section class="video">
+      <div class="video__dec"></div>
       <div class="container">
         <div class="video__wrapper">
           <div class="video__title">ГОТОВЫ ВНЕДРИТЬ</div>
@@ -74,6 +75,7 @@
     </section>
 
     <section class="moduls">
+      <div class="moduls__dec"><img src="./img/decor/dec2.png" alt="" /></div>
       <div class="container">
         <div class="moduls__wrapper">
           <div class="moduls__title">За 3 месяца</div>
@@ -157,7 +159,9 @@
                   </div>
                 </div>
                 <div class="moduls__tabs-content-item">
-                  <div class="moduls__tabs-content-title">В результате модуля:</div>
+                  <div class="moduls__tabs-content-title moduls__tabs-content-title--mb20">
+                    В результате модуля:
+                  </div>
                   <div class="moduls__tabs-content-elems">
                     <div class="moduls__tabs-content-elem"><p>Сделаете первые продажи</p></div>
                     <div class="moduls__tabs-content-elem">
@@ -184,7 +188,119 @@
       </div>
     </section>
 
-    
+    <section class="packets">
+      <div class="packets__dec"><img src="./img/decor/dec3.png" alt="" /></div>
+
+      <div class="container">
+        <div class="packets__wrapper">
+          <div class="packets__info">
+            <div class="packets__title-block">
+              <div class="packets__title">Успейте включиться</div>
+              <div class="packets__text">в 3-месячное путешествие на лучших условиях</div>
+            </div>
+            <div class="packets__timer timer">
+              <div class="timer__title">До повышения цены осталось:</div>
+              <div class="timer__items">
+                <div class="timer__item">
+                  <div class="timer__item-nums" data-timer-hour>
+                    <div class="timer__item-num">0</div>
+                    <div class="timer__item-num">0</div>
+                  </div>
+                  <div class="timer__item-text">часов</div>
+                </div>
+                <div class="timer__separator">:</div>
+                <div class="timer__item">
+                  <div class="timer__item-nums" data-timer-minuts>
+                    <div class="timer__item-num">0</div>
+                    <div class="timer__item-num">0</div>
+                  </div>
+                  <div class="timer__item-text">минут</div>
+                </div>
+                <div class="timer__separator">:</div>
+                <div class="timer__item">
+                  <div class="timer__item-nums" data-timer-seconds>
+                    <div class="timer__item-num">0</div>
+                    <div class="timer__item-num">0</div>
+                  </div>
+                  <div class="timer__item-text">секунд</div>
+                </div>
+                <div class="timer__separator">:</div>
+                <div class="timer__item">
+                  <div class="timer__item-nums" data-timer-milseconds>
+                    <div class="timer__item-num">0</div>
+                    <div class="timer__item-num">0</div>
+                  </div>
+                  <div class="timer__item-text">м/л секунд</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="packets__items">
+            <div class="packets__item">
+              <div class="packets__item-title">
+                <div class="packets__item-title-img">
+                  <img src="./img/packets/1.png" alt="" />
+                </div>
+                <p>Зритель</p>
+              </div>
+              <ul class="packets__item-list">
+                <li>Модуль #1: Быстрые Деньги</li>
+                <li>Модуль #2: Продвижение</li>
+                <li>Модуль #3: Продажи</li>
+                <li>Модуль #4: Трафик</li>
+                <li>Модуль #5: Продукт</li>
+                <li>Модуль #6: Команда</li>
+                <li>Доступ к курсу — 6 месяцев после его окончания</li>
+                <li>Сертификат о прохождении курса</li>
+                <li class="disabled">Разборы с Артемом Нестеренко</li>
+                <li class="disabled">Участие в командах (десятках)</li>
+              </ul>
+              <div class="packets__item-info">
+                <div class="packets__item-info-text">Обычная Цена: <span>1000$</span></div>
+                <div class="packets__item-info-title">Цена сейчас: <span>500$</span></div>
+                <button class="packets__item-info-btn btn">Принять Участие</button>
+              </div>
+            </div>
+            <div class="packets__item">
+              <div class="packets__item-title">
+                <div class="packets__item-title-img">
+                  <img src="./img/packets/2.png" alt="" />
+                </div>
+                <p>Практик</p>
+              </div>
+              <ul class="packets__item-list">
+                <li>Модуль #1: Быстрые Деньги</li>
+                <li>Модуль #2: Продвижение</li>
+                <li>Модуль #3: Продажи</li>
+                <li>Модуль #4: Трафик</li>
+                <li>Модуль #5: Продукт</li>
+                <li>Модуль #6: Команда</li>
+                <li>Доступ к курсу — 6 месяцев после его окончания</li>
+                <li>Сертификат о прохождении курса</li>
+                <li>Разборы с Артемом Нестеренко</li>
+                <li>Участие в командах (десятках)</li>
+              </ul>
+              <div class="packets__item-info">
+                <div class="packets__item-info-text">Обычная Цена: <span>3600$</span></div>
+                <div class="packets__item-info-title">Цена сейчас: <span>1800$</span></div>
+                <button class="packets__item-info-btn btn">Принять Участие</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__title">Отдел Заботы</div>
+          <a href="https://t.me/artemnesterenko_support" target="_blank" class="footer__link">
+            Написать в Поддержку</a
+          >
+        </div>
+      </div>
+    </footer>
 
     <script src="./js/main.js"></script>
   </body>
