--- a/index.html
+++ b/index.html
@@ -177,11 +177,280 @@
                   </div>
                 </div>
               </div>
-              <div class="moduls__tabs-content" data-tab-content="modul-2"><p>Content 2</p></div>
-              <div class="moduls__tabs-content" data-tab-content="modul-3"><p>Content 3</p></div>
-              <div class="moduls__tabs-content" data-tab-content="modul-4"><p>Content 4</p></div>
-              <div class="moduls__tabs-content" data-tab-content="modul-5"><p>Content 4</p></div>
-              <div class="moduls__tabs-content" data-tab-content="modul-6"><p>Content 4</p></div>
+              <div class="moduls__tabs-content" data-tab-content="modul-2">
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
+                  <div class="moduls__tabs-content-text">
+                    <p>Создать сильный авторитет на рынке (особенно в Вашей нише)</p>
+                    <p>
+                      Научить Вас профессионально демонстрировать Вашу экспертность на рынке СНГ во
+                      всех социальных сетях
+                    </p>
+                    <p>
+                      Систематизировать процесс прогрева аудитории через разные каналы коммуникации
+                    </p>
+                  </div>
+                </div>
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title">
+                    Что Вы Изучите и Сделаете в этом Модуле:
+                  </div>
+                  <div class="moduls__tabs-content-list">
+                    <li>Как заявить о себе ярко и громко на рынке</li>
+                    <li>Как усиливать свое влияние через видео/аудио/текст контент</li>
+                    <li>Быстрое продвижение</li>
+                    <li>Концепция эффективного ресурса</li>
+                    <li>Юзабилити и как это использовать</li>
+                    <li>Научитесь вовлекать незнакомую аудиторию в Вашу экспертность</li>
+                    <li>
+                      Получите секретное оружие для того, чтобы аудитория Вас слушала и выполняла
+                      то, что Вы скажете ей
+                    </li>
+                    <li>
+                      Получите секретную технику для создания сильного аппетита у Вашей аудитории
+                    </li>
+                    <li>Как прогревать аудиторию до кипения</li>
+                    <li>Мягкий «вечный прогрев»</li>
+                    <li>Прогрев через Сторителлинг</li>
+                    <li>Истории успеха как инструмент ажиотажа</li>
+                    <li>Искусство удержания внимания</li>
+                    <li>Инфоповоды и сюжетные линии</li>
+                    <li>Искусство ведения сторис</li>
+                    <li>Как правильно передавать ключевые смыслы</li>
+                    <li>Реалити, марафоны, вызовы</li>
+                    <li>Методы повышения охватов</li>
+                    <li>Методы повышения охватов</li>
+                    <li>Наглядное понимание создания прогрева</li>
+                    <li>Ключевые правила для формирования личного бренда</li>
+                    <li>Создание концепции Ваших ценностей</li>
+                    <li>Основные принципы для захвата внимания</li>
+                    <li>Привлечение сильного внимания через стиль жизни</li>
+                    <li>Сила экспертности и упаковка уважения на рынке</li>
+                    <li>Секреты влияния и 18 психологических триггеров</li>
+                  </div>
+                </div>
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title moduls__tabs-content-title--mb20">
+                    В результате модуля:
+                  </div>
+                  <div class="moduls__tabs-content-elems">
+                    <div class="moduls__tabs-content-elem">
+                      <p>
+                        Вы — личный бренд, при меньших усилиях Вы получаете значительно больший
+                        поток клиентов.
+                      </p>
+                    </div>
+                    <div class="moduls__tabs-content-elem">
+                      <p>
+                        У Вас есть Ваши амбассадоры. Процесс прогрева поставлен на поток. Охваты
+                        растут, а в директе сотни сообщений:
+
+                        <i
+                          >Как записаться к Вам на консультацию?<br />
+                          Когда уже можно будет купить Ваш продукт?<br />
+                          Подскажите, какая цена?<br />
+                          Можно не ждать, а купить прямо сейчас?</i
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="moduls__tabs-content" data-tab-content="modul-3">
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
+                  <div class="moduls__tabs-content-text">
+                    <p>
+                      Научиться эффективно доносить ценность своего продукта разными способами и
+                      найти тот способ, который лучше всего работает именно у Вас.
+                    </p>
+                    <p>
+                      Плюс ко всему — Вы научитесь выстраивать продажу ценности через
+                      контент-маркетинг.
+                    </p>
+                    <p>
+                      Сделать так, чтобы Вы стали самым ярким, самым неординарным экспертом в своей
+                      нише.
+                    </p>
+                    <p>
+                      Научить Вас профессионально продавать свой продукт и создать вокруг него
+                      мегаажиотаж
+                    </p>
+                  </div>
+                </div>
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title">
+                    Что Вы Изучите и Сделаете в этом Модуле:
+                  </div>
+                  <div class="moduls__tabs-content-list">
+                    <li>
+                      Вы создадите феерический ажиотаж, который Вас выделит на рынке из всего что
+                      есть.
+                    </li>
+                    <li>Проверите на себе разные модели продаж</li>
+                    <li>Продажи в директе</li>
+                    <li>Продажи через вебинар</li>
+                    <li>Продажи через подающее видео</li>
+                    <li>Продажи через трипваер</li>
+                    <li>Продажи через отдел продаж</li>
+                    <li>Продажи через отдел диагностов</li>
+                    <li>Продажи с ежемесячной выручкой</li>
+                    <li>Продажи через запуски</li>
+                    <li>Закрытые и открытые продажи</li>
+                    <li>Продажи в сторис</li>
+                    <li>Продажи через предзапись (анкету)</li>
+                  </div>
+                </div>
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title moduls__tabs-content-title--mb20">
+                    В результате модуля:
+                  </div>
+                  <div class="moduls__tabs-content-elems">
+                    <div class="moduls__tabs-content-elem">
+                      <p>
+                        У Вас будет в арсенале несколько рабочих связок продаж Ваших продуктов,
+                        которые будут подходить лучшим способом именно Вам
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="moduls__tabs-content" data-tab-content="modul-4">
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
+                  <div class="moduls__tabs-content-text">
+                    <p>
+                      Создать систему постоянного увеличивающегося потока новой аудитории на Ваши
+                      ресурсы бесплатными и платными методами
+                    </p>
+                    <p>
+                      Создать воронку или запуск, при котором каждый вложенный 1$ будет
+                      конвертироваться в 3$, 5$ и даже в 10 $$$
+                    </p>
+                  </div>
+                </div>
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title">
+                    Что Вы Изучите и Сделаете в этом Модуле:
+                  </div>
+                  <div class="moduls__tabs-content-list">
+                    <li>Как расширять Вашу узнаваемость на 200 человек в день</li>
+                    <li>Как привлечь свою целевую аудиторию</li>
+                    <li>
+                      Будете понимать, как масштабироваться и усиливать запуски за счет трафика
+                    </li>
+                    <li>Разберетесь, с какими источниками трафика работать именно Вам</li>
+                    <li>Как выстроить антихрупкую систему трафика</li>
+                    <li>Коллаборации</li>
+                    <li>Как закупать и окупать новый трафик</li>
+                    <li>Как работать с новой аудиторией и сокращать цикл покупки клиентов</li>
+                    <li>
+                      Как набирать сотни тысяч подписчиков через REELS и сразу же им продавать
+                    </li>
+                    <li>Схемы эффективной рекламы</li>
+                    <li>Как работать с блогерами</li>
+                    <li>Декомпозиция</li>
+                  </div>
+                </div>
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title moduls__tabs-content-title--mb20">
+                    В результате модуля:
+                  </div>
+                  <div class="moduls__tabs-content-elems">
+                    <div class="moduls__tabs-content-elem">
+                      <p>
+                        Каждый день приходят бесплатные целевые подписчики/лиды. Платная реклама
+                        приносит Х3, Х5, Х10 в деньгах
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="moduls__tabs-content" data-tab-content="modul-5">
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
+                  <div class="moduls__tabs-content-text">
+                    <p>
+                      Создание Флагманского продукта и продуктовой линейки с Вашим минимальным
+                      участием
+                    </p>
+                  </div>
+                </div>
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title">
+                    Что Вы Изучите и Сделаете в этом Модуле:
+                  </div>
+                  <div class="moduls__tabs-content-list">
+                    <li>Анализ, глубинные интервью, Кастдевы</li>
+                    <li>
+                      Как понять, что нужно Вашей аудитории / за что они с радостью будут Вам
+                      платить
+                    </li>
+                    <li>Прототип продукта / тест гипотез / выбор лучшего</li>
+                    <li>Методология результативных продуктов</li>
+                    <li>Продуктовая линейка</li>
+                    <li>Создание флагманского продукта</li>
+                    <li>Создание премиум-продуктов</li>
+                    <li>Создание массовых продуктов, трипваеров, апселов, даунселов, кросселов</li>
+                    <li>Оптимизация Вашего времени</li>
+                    <li>Тарифы и ценообразование</li>
+                    <li>Как брать/упаковывать отзывы, кейсы и истории успехов</li>
+                    <li>Продающая программа курса</li>
+                    <li>7 шагов к продукту на 1 млн $</li>
+                  </div>
+                </div>
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title moduls__tabs-content-title--mb20">
+                    В результате модуля:
+                  </div>
+                  <div class="moduls__tabs-content-elems">
+                    <div class="moduls__tabs-content-elem">
+                      <p>
+                        Вы усилите Ваши продукты или создадите те, которые можно масштабировать в
+                        долгосрок
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="moduls__tabs-content" data-tab-content="modul-6">
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title">Главная Задача Модуля</div>
+                  <div class="moduls__tabs-content-text">
+                    <p>
+                      Создание Флагманского продукта и продуктовой линейки с Вашим минимальным
+                      участием
+                    </p>
+                  </div>
+                </div>
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title">
+                    Что Вы Изучите и Сделаете в этом Модуле:
+                  </div>
+                  <div class="moduls__tabs-content-list">
+                    <li>Как сделать красиво и сэкономить? Минимальный набор для запуска</li>
+                    <li>Какие специалисты нужны для запуска и как их найти?</li>
+                    <li>Как правильно платить специалистам, чтобы не рисковать?</li>
+                    <li>Скринкаст «Как самому сделать себе простой сайт на Тильде?»</li>
+                    <li>Гайд по сервисам для запуска</li>
+                    <li>Пример технического задания для дизайнера и технического специалиста</li>
+                    <li>Чат с проверенными недорогими веб-дизайнерами</li>
+                  </div>
+                </div>
+                <div class="moduls__tabs-content-item">
+                  <div class="moduls__tabs-content-title moduls__tabs-content-title--mb20">
+                    В результате модуля:
+                  </div>
+                  <div class="moduls__tabs-content-elems">
+                    <div class="moduls__tabs-content-elem">
+                      <p>
+                        Все работает! Сайт готов, кассу подключили, GetCourse настроили, а потратили
+                        на это копейки!
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
